<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/fill_your_data"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:hint="@string/heigth"
        android:inputType="numberDecimal"
        android:id="@+id/text_heigth"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/weigth"
        android:padding="16dp"
        android:inputType="numberDecimal"
        android:id="@+id/text_weigth"
        android:textColorHint="@color/black"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/gender"
        android:padding="16dp"
        android:inputType="text"
        android:id="@+id/text_gender"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/result"
        android:id="@+id/text_result"
        android:textSize="24sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/information_weigth"
        android:id="@+id/text_information_weigth"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculate_imc"
        android:id="@+id/button_calculate"
        android:textSize="20sp"
        android:paddingTop="22dp"
        android:backgroundTint="@color/green"
        android:layout_margin="10dp"/>

</LinearLayout>